tests/neg/i15687.scala
val _ = summon[Tuple.IsMappedBy[[X] =>> Int][(4, 2)]] // error

